--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -71,10 +71,10 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 2 #5
+    gaps_out = 10 #20
 
-    border_size = 2
+    border_size = 1 #2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
@@ -95,7 +95,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 1.0
+    inactive_opacity = 0.9
 
     shadow {
         enabled = true
